# LBALL

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
include/glad/: glad.h
output/: lball  main
src/: glad.c  main.c  main.cpp
src/game/: game.c  game.h  gameobject.c  gameobject.h
